[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/AppWindow.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/Close_Normal.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/Close_Pressed.png" type="Texture" id=3]
[ext_resource path="res://resources/textures/Close_Hover.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/Minimize_Pressed.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/Minimize_Hover.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/Minimize_Normal.png" type="Texture" id=7]
[ext_resource path="res://resources/textures/Maximize_Pressed.png" type="Texture" id=8]
[ext_resource path="res://resources/textures/Maximize_Hover.png" type="Texture" id=9]
[ext_resource path="res://resources/textures/Maximize_Normal.png" type="Texture" id=10]
[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=11]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_top = 20.0

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 4 )
PopupPanel/styles/panel = SubResource( 3 )
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.333333 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.423529, 1, 0.490196 )

[node name="AppWindow" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -160.0
margin_right = 272.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 272, 160 )
theme = SubResource( 2 )
window_title = "App Name"
resizable = true
script = ExtResource( 1 )

[node name="MinimizeButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_top = -18.0
margin_right = -50.0
margin_bottom = -2.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="MaximizeButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = -18.0
margin_right = -28.0
margin_bottom = -2.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true

[node name="CloseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.0
margin_top = -18.0
margin_right = -6.0
margin_bottom = -2.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="DebugLabel" type="Label" parent="."]
margin_top = -21.0
margin_right = 100.0
margin_bottom = -3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "(0, 0)"

[node name="WindowRaiser" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 6 )

[node name="SnapPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="SnapTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="MaximizeButton" to="." method="_on_MaximizeButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="SnapTimer" to="." method="_on_SnapTimer_timeout"]
